# DeSiGNAR

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  Doxyfile.es  LICENSE  MODERNIZATION.es.md  MODERNIZATION.md  Makefile  README.es.md  README.md  conanfile.py  doxydoc  genrelease  run_tests.sh  xmake.lua
.github/workflows/: build_library.yml
cmake/: DesignarConfig.cmake.in
cmake/macros/: CheckPlatform.cmake  ConfigureBaseTargets.cmake
docs/: doxygen-header-en.html  doxygen-header-es.html  groups.dox
english-documentation/: Doxyfile  README-en.md
english-documentation/html/: _r_e_a_d_m_e-en_8md.html  _r_e_a_d_m_e-en_8md_source.html  _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e_8md_source.html  annotated.html  array_8_c.html  array_8_c__incl.map  array_8_c_source.html  array_8_h.html  array_8_h.js  array_8_h__dep__incl.map  array_8_h_source.html  bitset_8_c.html  bitset_8_c_source.html  bitset_8_h.html  bitset_8_h__dep__incl.md5  bitset_8_h_source.html  buildgraph_8_c.html  buildgraph_8_c_source.html  buildgraph_8_h.html  buildgraph_8_h.js  buildgraph_8_h__dep__incl.map  buildgraph_8_h__dep__incl.md5  buildgraph_8_h__incl.md5  buildgraph_8_h_source.html  class_designar_1_1_arc_heap-members.html  class_designar_1_1_arc_heap.html  class_designar_1_1_arc_heap.js  class_designar_1_1_arc_heap__inherit__graph.map  class_designar_1_1_arc_heap__inherit__graph.md5  class_designar_1_1_arc_heap_cmp-members.html  class_designar_1_1_arc_heap_cmp.html  class_designar_1_1_arc_heap_cmp__coll__graph.map  class_designar_1_1_array_iterator-members.html  class_designar_1_1_array_map.js  (+925 more)
html/: _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e_8md_source.html  annotated.html  annotated_dup.js  array_8_c.html  array_8_c__incl.md5  array_8_c_source.html  array_8_h.html  array_8_h__dep__incl.md5  array_8_h__incl.map  array_8_h__incl.md5  array_8_h_source.html  bitset_8_c.html  bitset_8_c__incl.map  bitset_8_c__incl.md5  bitset_8_c_source.html  bitset_8_h.html  bitset_8_h__dep__incl.map  bitset_8_h__incl.map  bitset_8_h__incl.md5  bitset_8_h_source.html  buildgraph_8_c.html  buildgraph_8_c__incl.map  buildgraph_8_c__incl.md5  buildgraph_8_c_source.html  buildgraph_8_h.html  buildgraph_8_h__incl.map  buildgraph_8_h_source.html  class_designar_1_1_arc_heap.html  class_designar_1_1_arc_heap__coll__graph.md5  class_designar_1_1_arc_heap_cmp.html  class_designar_1_1_arc_heap_cmp.js  class_designar_1_1_array_iterator.html  class_designar_1_1_array_iterator.js  class_designar_1_1_array_iterator__coll__graph.md5  class_designar_1_1_array_iterator__inherit__graph.map  class_designar_1_1_array_iterator__inherit__graph.md5  class_designar_1_1_array_map-members.html  class_designar_1_1_array_map.html  class_designar_1_1_array_map__coll__graph.map  (+820 more)
include/: allpairsshortestpaths.hpp  antcolony.hpp  array.H  array.hpp  automata.hpp  avltree.hpp  beecolony.hpp  bipartitematching.hpp  bitset.H  bitset.hpp  bloomfilter.hpp  bridges.hpp  btree.hpp  buildgraph.H  buildgraph.hpp  cellularautomaton.hpp  chainedhash.hpp  closestpair.hpp  concurrentgraph.hpp  concurrentmap.hpp  containeralgorithms.H  containeralgorithms.hpp  genetic.hpp  geometricalgorithms.H  geometricalgorithms.hpp  grammar.hpp  graph.H  graph.hpp  graphagent.hpp  graphalgorithms.H  graphalgorithms.hpp  graphutilities.H  graphutilities.hpp  hash.H  hash.hpp  hashchain.hpp  heap.H  heap.hpp  intutilities.H  intutilities.hpp  (+86 more)
latex/: _r_e_a_d_m_e_8md.tex  annotated.tex  array_8_c.tex  array_8_c__incl.md5  array_8_h.tex  array_8_h__dep__incl.md5  array_8_h__incl.md5  bitset_8_c.tex  bitset_8_c__incl.md5  bitset_8_h.tex  bitset_8_h__dep__incl.md5  bitset_8_h__incl.md5  buildgraph_8_c.tex  buildgraph_8_h.tex  class_designar_1_1_arc_heap.tex  class_designar_1_1_arc_heap__coll__graph.md5  class_designar_1_1_arc_heap__inherit__graph.md5  class_designar_1_1_arc_heap_cmp.tex  class_designar_1_1_array_iterator.tex  class_designar_1_1_array_iterator__coll__graph.md5  class_designar_1_1_array_map.eps  class_designar_1_1_array_map.tex  class_designar_1_1_array_map__inherit__graph.md5  class_designar_1_1_array_set.tex  class_designar_1_1_array_set__coll__graph.md5  class_designar_1_1_array_set__inherit__graph.md5  class_designar_1_1_astar.tex  class_designar_1_1_astar__coll__graph.md5  class_designar_1_1_base_bin_tree_node.tex  class_designar_1_1_base_graph.tex  class_designar_1_1_base_graph_arc.tex  class_designar_1_1_base_graph_node.tex  class_designar_1_1_base_graph_node__coll__graph.md5  class_designar_1_1_base_graph_node__inherit__graph.md5  class_designar_1_1_basic_iterator.tex  class_designar_1_1_basic_iterator__inherit__graph.md5  class_designar_1_1_bellman_ford.tex  class_designar_1_1_bidirectional_iterator.tex  class_designar_1_1_bidirectional_iterator__coll__graph.md5  class_designar_1_1_bidirectional_iterator__inherit__graph.md5  (+362 more)
lib/: .emptydir
samples/: demo-buildgraph.C  demo-concurrentqueue.C  demo-graph-components.C  demo-graph-mincut.C  demo-graph.C  demo-iterators.C  demo-range.C  demo-topological_sort.C  test-array.C  test-bitset.C  test-dllist.C  test-graph-cycles.C  test-hash.C  test-heap.C  test-in-out-graph.C  test-intutilities.C  test-map.C  test-mtreenode.C  test-pow.C  test-queue.C  test-random.C  test-range.C  test-relation.C  test-sllist.C  test-stack.C  test-stringutilities.C  test-tree.C  test-vector2D.C
spanish-documentation/: Doxyfile  README-es.md
src/: allpairsshortestpaths.cpp  antcolony.cpp  array.C  array.cpp  array.mpp  automata.cpp  avltree.cpp  beecolony.cpp  bipartitematching.cpp  bitset.C  bitset.cpp  bitset.mpp  bloomfilter.cpp  bridges.cpp  btree.cpp  buildgraph.C  buildgraph.cpp  buildgraph.mpp  cellularautomaton.cpp  chainedhash.cpp  closestpair.cpp  concurrentgraph.cpp  concurrentmap.cpp  containeralgorithms.C  containeralgorithms.cpp  containeralgorithms.mpp  genetic.cpp  geometricalgorithms.C  geometricalgorithms.cpp  geometricalgorithms.mpp  grammar.cpp  graph.C  graph.cpp  graph.mpp  graphagent.cpp  graphalgorithms.C  graphalgorithms.cpp  graphalgorithms.mpp  graphutilities.C  graphutilities.cpp  (+121 more)
(+1734 files in other folders)
